--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,54 +1,15 @@
 ---
-# File: tasks/main.yml - Main tasks for ansible-couchbase-server
+- include: cluster_install.yml
+  when: couchbase_cluster_install
 
-# Ansible distrib tasks
-- include: {{ ansible_distribution }}.yml
+- include: cluster_init_primary.yml
+  when: couchbase_cluster_init_primary
 
-- name: Update user limits
-  sudo: True
-  copy: 
-    src=etc_security_limits.d_couchbase-server.conf 
-    dest=/etc/security/limits.d/couchbase-server.conf 
-    owner=root 
-    group=root 
-    mode=0644
+- include: cluster_init_additional.yml
+  when: couchbase_cluster_init_additional
 
-- name: Install profile.d script
-  sudo: True
-  template: 
-    src=profile_couchbase-server.sh.j2 
-    dest=/etc/profile.d/couchbase-server.sh
+- include: cluster_add_rebalance.yml
+  when: couchbase_cluster_add_rebalance
 
-- name: Optimized settings for Couchbase Server data and index volumes
-  sudo: True
-  mount: 
-    name={{ couchbase_server_mountpoint }} 
-    src={{ couchbase_server_partition }} 
-    opts={{ couchbase_server_mount_options }} 
-    fstype={{ couchbase_server_filesystem }} 
-    state=mounted
-  when: couchbase_server_tune_os
-
-- name: Kernel settings dir
-  file: 
-    dest=/etc/sysctl.d 
-    state=directory
-
-- name: Kernel settings config
-  sudo: True
-  template: 
-    src=etc_sysctl.d_couchbase-server.conf.j2 
-    dest=/etc/sysctl.d/couchbase-server.conf 
-    owner=root 
-    group=root 
-    mode=0644
-  notify: Update kernel settings
-
-- name: Disable THP
-  sudo: True
-  shell: echo 'for i in /sys/kernel/mm/*transparent_hugepage/enabled; do echo never > $i; done' >> /etc/rc.local
-  shell: echo 'for i in /sys/kernel/mm/*transparent_hugepage/defrag; do echo never > $i; done' >> /etc/rc.local
-  shell: for i in /sys/kernel/mm/*transparent_hugepage/enabled; do echo never > $i; done
-  when: ansible_distribution_version != "12.04"
-  ignore_errors: True
-  notify: Source local settings
+- include: cluster_create_bucket.yml
+  when: couchbase_create_bucket
