--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -131,8 +131,7 @@ couchbase_server_ubuntu_ce_sha256: e275717da0c22efb846b397a1ffeaf63a21ec91e4e481
 #
 # Drives the execution of the tasks
 # 
-couchbase_cluster_install: true
-couchbase_cluster_init_primary: false
-couchbase_cluster_init_additional: false
+couchbase_cluster_install: false
+couchbase_cluster_init: false
 couchbase_cluster_add_rebalance: false
 couchbase_create_bucket: false
