--- a/tasks/cluster_init.yml
+++ b/tasks/cluster_init.yml
@@ -9,7 +9,7 @@
 - name: Configure cluster settings
   shell: 
     "{{ couchbase_server_bin_path }}/couchbase-cli cluster-init \
-      -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} \
+      -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --user={{ couchbase_server_admin }} \
       --password={{ couchbase_server_password }} \
       --cluster-init-username={{ couchbase_server_admin }} \
@@ -21,7 +21,7 @@
 - name: Configure cluster settings
   shell: 
     "{{ couchbase_server_bin_path }}/couchbase-cli cluster-init \
-      -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} \
+      -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --user={{ couchbase_server_admin }} \
       --password={{ couchbase_server_password }} \
       --cluster-init-username={{ couchbase_server_admin }} \
@@ -34,12 +34,12 @@
 - name: Wait for Admin
   wait_for: "port={{ couchbase_server_admin_port }} delay=5"
 
-- name: Initialize primary node
+- name: Initialize node
   shell: 
     "{{ couchbase_server_bin_path }}/couchbase-cli node-init \
-      -c {{ couchbase_server_primary_node }}:{{ couchbase_server_admin_port }} \
+      -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --user={{ couchbase_server_admin }} \
       --password={{ couchbase_server_password }} \
       --cluster-init-username={{ couchbase_server_admin }} \
-      --node-init-hostname={{ ansible_fqdn }}"
+      --node-init-hostname={{ couchbase_server_node }}"
   when: cb_major_version['stdout'] != "2"
