--- a/tasks/cluster_add_rebalance.yml
+++ b/tasks/cluster_add_rebalance.yml
@@ -1,7 +1,7 @@
 ---
 - name: Join additional cluster nodes
   shell: 
-    "{{ couchbase_server_home_path }}/bin/couchbase-cli server-add \
+    "{{ couchbase_server_bin_path }}/couchbase-cli server-add \
       -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --user={{ couchbase_server_admin }} \
       --password={{ couchbase_server_password }} \
@@ -9,10 +9,12 @@
       --server-add-username={{ couchbase_server_admin }} \
       --server-add-password={{ couchbase_server_password }}"
   with_items: groups['additional']
+  ignore_errors: true
 
 - name: Rebalance cluster
   shell: 
-    "{{ couchbase_server_home_path }}/bin/couchbase-cli rebalance \
+    "{{ couchbase_server_bin_path }}/couchbase-cli rebalance \
       -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --user={{ couchbase_server_admin }} \
       --password={{ couchbase_server_password }}"
+  ignore_errors: true
