chore(tasks): update cli flags and become statements

--- a/examples/cluster_backup.yml
+++ b/examples/cluster_backup.yml
@@ -5,7 +5,7 @@
 # tarball in $PWD/var/couchbase_backups/
 
 - hosts: cluster_nodes
-  sudo: True
+  become: True
   vars:
     couchbase_server_primary_node: "{{hostvars[groups['primary'][0]]['inventory_hostname']}}"
   vars_files:
@@ -16,7 +16,7 @@
 
 - hosts: primary
   gather_facts: False
-  sudo: True
+  become: True
   vars:
     couchbase_server_primary_node: "{{hostvars[groups['primary'][0]]['inventory_hostname']}}"
   vars_files:
