--- a/tasks/Ubuntu.yml
+++ b/tasks/Ubuntu.yml
@@ -14,13 +14,13 @@
   tags: installation
 
 - name: Install package
-  sudo: True
+  become: True
   apt: "deb=/tmp/{{ couchbase_server_ubuntu_ee_package }} state=present"
   when: couchbase_server_edition == "enterprise"
   tags: installation
 
 - name: Package file cleanup
-  sudo: True
+  become: True
   file: "dest=/tmp/{{ couchbase_server_ubuntu_ee_package }} state=absent"
   when: couchbase_server_edition == "enterprise"
   tags: installation
@@ -38,13 +38,13 @@
   tags: installation
 
 - name: Install package
-  sudo: True
+  become: True
   apt: "deb=/tmp/{{ couchbase_server_ubuntu_ce_package }} state=present"
   when: couchbase_server_edition == "community"
   tags: installation
 
 - name: Package file cleanup
-  sudo: True
+  become: True
   file: "dest=/tmp/{{ couchbase_server_ubuntu_ce_package }} state=absent"
   when: couchbase_server_edition == "community"
   tags: installation
