--- a/examples/site.yml
+++ b/examples/site.yml
@@ -3,6 +3,6 @@
 
 - name: Couchbase Server
   hosts: cluster_nodes
-  sudo: True
+  become: True
   roles:
     - { role: couchbase.couchbase-server }
