--- a/tasks/cluster_install.yml
+++ b/tasks/cluster_install.yml
@@ -5,7 +5,7 @@
 - include: "{{ ansible_distribution }}.yml"
 
 - name: Update user limits
-  sudo: True
+  become: True
   copy: 
     src=etc_security_limits.d_couchbase-server.conf 
     dest=/etc/security/limits.d/couchbase-server.conf 
@@ -14,13 +14,13 @@
     mode=0644
 
 - name: Install profile.d script
-  sudo: True
+  become: True
   template: 
     src=profile_couchbase-server.sh.j2 
     dest=/etc/profile.d/couchbase-server.sh
 
 - name: Optimized settings for Couchbase Server data and index volumes
-  sudo: True
+  become: True
   mount: 
     name={{ couchbase_server_mountpoint }} 
     src={{ couchbase_server_partition }} 
@@ -35,7 +35,7 @@
     state=directory
 
 - name: Kernel settings config
-  sudo: True
+  become: True
   template: 
     src=etc_sysctl.d_couchbase-server.conf.j2 
     dest=/etc/sysctl.d/couchbase-server.conf 
@@ -45,7 +45,7 @@
   notify: Update kernel settings
 
 - name: Disable THP
-  sudo: True
+  become: True
   lineinfile:
     dest=/etc/rc.local
     line={{ item }}
