--- a/tasks/cluster_add_rebalance.yml
+++ b/tasks/cluster_add_rebalance.yml
@@ -9,8 +9,7 @@
       --server-add-username={{ couchbase_server_admin }} \
       --server-add-password={{ couchbase_server_password }} \
       --service={{ couchbase_server_node_services }}"
-  with_items: groups['additional']
-  ignore_errors: true
+  with_items: "{{ groups['additional'] }}"
 
 - name: Rebalance cluster
   shell: 
@@ -18,4 +17,3 @@
       -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --user={{ couchbase_server_admin }} \
       --password={{ couchbase_server_password }}"
-  ignore_errors: true
