--- a/tasks/cluster_init.yml
+++ b/tasks/cluster_init.yml
@@ -13,9 +13,11 @@
       --cluster-username={{ couchbase_server_admin }} \
       --cluster-password={{ couchbase_server_password }} \
       --cluster-port={{couchbase_server_admin_port}} \
-      --cluster-ramsize={{ couchbase_server_ram }}"
+      --cluster-ramsize={{ couchbase_server_ram }} \
+      --cluster-fts-ramsize={{ couchbase_idex_ram }} \
+      --cluster-index-ramsize={{ couchbase_fts_ram }} \
+      --service={{ couchbase_server_node_services }}"
   when: cb_major_version['stdout'] != "4"
-  ignore_errors: true
 
 - name: Wait for Admin
   wait_for: "port={{ couchbase_server_admin_port }} delay=5"
@@ -28,4 +30,3 @@
       --password={{ couchbase_server_password }} \
       --node-init-hostname={{ couchbase_server_node }}"
   when: cb_major_version['stdout'] != "2"
-  ignore_errors: true
