--- a/tasks/cluster_add_rebalance.yml
+++ b/tasks/cluster_add_rebalance.yml
@@ -1,6 +1,6 @@
 ---
 - name: Join additional cluster nodes
-  shell: 
+  shell:
     "{{ couchbase_server_bin_path }}/couchbase-cli server-add \
       -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --username={{ couchbase_server_admin }} \
@@ -12,8 +12,8 @@
   with_items: "{{ groups['additional'] }}"
 
 - name: Rebalance cluster
-  shell: 
+  shell:
     "{{ couchbase_server_bin_path }}/couchbase-cli rebalance \
       -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
-      --user={{ couchbase_server_admin }} \
+      --username={{ couchbase_server_admin }} \
       --password={{ couchbase_server_password }}"
