--- a/tasks/cluster_init.yml
+++ b/tasks/cluster_init.yml
@@ -7,15 +7,15 @@
   wait_for: "port={{ couchbase_server_admin_port }} delay=5"
 
 - name: Configure cluster settings
-  shell: 
+  shell:
     "{{ couchbase_server_bin_path }}/couchbase-cli cluster-init \
       -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --cluster-username={{ couchbase_server_admin }} \
       --cluster-password={{ couchbase_server_password }} \
       --cluster-port={{couchbase_server_admin_port}} \
       --cluster-ramsize={{ couchbase_server_ram }} \
-      --cluster-fts-ramsize={{ couchbase_idex_ram }} \
-      --cluster-index-ramsize={{ couchbase_fts_ram }} \
+      --cluster-index-ramsize={{ couchbase_index_ram }}
+      --cluster-fts-ramsize={{ couchbase_fts_ram }} \
       --service={{ couchbase_server_node_services }}"
   when: cb_major_version['stdout'] != "4"
 
@@ -23,7 +23,7 @@
   wait_for: "port={{ couchbase_server_admin_port }} delay=5"
 
 - name: Initialize node
-  shell: 
+  shell:
     "{{ couchbase_server_bin_path }}/couchbase-cli node-init \
       -c {{ couchbase_server_node }}:{{ couchbase_server_admin_port }} \
       --username={{ couchbase_server_admin }} \
