--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,6 +48,7 @@ couchbase_server_api_ssl_port: 18092
 couchbase_server_default_bucket: default
 couchbase_server_internal_ports: "11207:11215"
 couchbase_server_node_data_ports: "21100:21299"
+couchbase_server_node_services: data,index,query,fts
 couchbase_server_sshd_port: 22
 couchbase_server_home_path: "/opt/couchbase"
 couchbase_server_bin_path: "{{ couchbase_server_home_path }}/bin"
