--- a/tasks/cluster_add_rebalance.yml
+++ b/tasks/cluster_add_rebalance.yml
@@ -8,7 +8,7 @@
       --server-add={{ hostvars[item]['ansible_'+ iface | default('eth0') ]['ipv4']['address'] }}:{{ couchbase_server_admin_port }} \
       --server-add-username={{ couchbase_server_admin }} \
       --server-add-password={{ couchbase_server_password }} \
-      --service={{ couchbase_server_node_services }}"
+      --services={{ couchbase_server_node_services }}"
   with_items: "{{ groups['additional'] }}"
   when: "{{ 'additional' in groups }}"
 
